[package]
name = "cw-wager"
version = "0.1.0"
authors = ["Josef Leventon <josef.leventon@gmail.com>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-std = "1.2.1"
cosmwasm-storage = "1.2.1"
cosmwasm-schema = "1.2.1"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
semver = "1.0.16"
cw721 = "0.13.4"
cw721-base = { version = "0.13.4", features = ["library"] }
cw-utils = "1.0.1"
sg1 = "0.22.9"
sg-std = "0.22.9"
sg721 = "0.22.9"
sg721-base = "0.22.9"

[dev-dependencies]
cw-multi-test = "0.16.2"
sg-multi-test = "0.22.9"
sg2 = "0.22.9"
vending-minter = { version = "0.22.9", features = ["library"] }
vending-factory = { version = "0.22.9", features = ["library"] }
base-minter = { version = "0.22.9", features = ["library"] }
